# python-mechanics

./: .gitignore  LICENSE.md  README.md  pyproject.toml
docs/examples/: example_01.py  example_02.py  example_03.py  example_04.py  example_05.py  example_06.py  example_07.py  example_08.py  example_09.py  example_10.py  example_11.py  example_12.py  example_13.py  example_14.py  example_15.py  example_16.py  example_17.py  example_18.py  example_19.py  example_20.py  example_21.py  example_22.py  example_23.py  example_24.py  example_25.py  example_26.py  example_27.py  example_28.py  example_29.py  example_30.py  example_31.py  example_32.py  example_33.py  example_34.py  example_35.py  example_36.py  example_37.py  example_38.py  example_39.py  example_40.py  (+10 more)
docs/examples/statics/: 01_definition_of_force.ipynb  02_internal_resultant_loadings_01.ipynb  03_internal_resultant_loadings_02.ipynb  04_internal_resultant_loadings_03.ipynb  05_internal_resultant_loadings_04.ipynb  notebook_01.ipynb  notebook_02.ipynb
mechanics/: __init__.py  pint_setup.py
mechanics/charts/: __init__.py
mechanics/geometry/: __init__.py  geometry.py  shapes.py
mechanics/section/: __init__.py  section.py
mechanics/statics/: __init__.py  _position.py  _units.py  beam.py  distributed_load.py  force.py  position.py  supports.py  system.py  vector.py
mechanics/strength/: __init__.py  beam.py  section.py  thin_wall_vessel.py
mechanics/stress/: __init__.py  _stress.py  normal_stress.py  section.py  simple_shear.py
mechanics/utils/: __init__.py  utils.py
(+28 files in other folders)
