[tool.poetry]
name = "python-mechanics"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Tom Christiaens <tom.chr@proximus.be>"]
readme = "README.md"
packages = [{include = "python_mechanics"}]

[tool.poetry.dependencies]
python = "^3.12"
pint = "^0.23"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
pandas = "^2.2.1"
scipy = "^1.13.0"
sympy = "^1.12"
vpython = "^7.6.5"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
jupyterlab-lsp = "^5.1.0"
python-lsp-server = {extras = ["all"], version = "^1.11.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
